# Hands-on-deep-learning

./: .gitignore  CHANGELOG.md  pyproject.toml  report.ipynb
CSC420/A1/: CHANGELOG.md  prepare_data.py  task11_results.pkl  task2_results.pkl  task3_results.pkl  task4_results.pkl  task5_results.pkl
STAD68/A2/: A2_cnn_cifar10_pytorch.ipynb  CHANGELOG.md  best_cifar10_simplecnn_adamw.pt  best_resnet20_cifar10_adamw.pt
STAD80/A2/: CHANGELOG.md
